--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external/glm"]
 	path = external/glm
 	url = https://github.com/g-truc/glm
+[submodule "external/tinyexr"]
+	path = external/tinyexr
+	url = git@github.com:syoyo/tinyexr.git
